--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,20 +4,24 @@
 <!--    android:layout_width="match_parent"-->
 <!--    android:layout_height="match_parent"-->
 <!--    tools:context=".ui.settings.SettingsFragment">-->
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/backgroundImageViewSettings"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="743dp"
         android:scaleType="fitXY"
-        android:src="@drawable/settings" /> <!-- Replace with your image resource -->
+        android:src="@drawable/settings"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" /> <!-- Replace with your image resource -->
 
     <LinearLayout
+        android:id="@+id/linearLayout4"
         android:layout_width="369dp"
         android:layout_height="275dp"
         android:orientation="vertical"
